fixed splash-align overflow on right side

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -19,7 +19,7 @@ html>body .full-screen {
 }
 
 .splash-align {
-  margin: 0% 0% 0% $splash-align;
+  margin: 0% $splash-align 0% $splash-align;
 }
 
 #open {
